# gpt2-small-repro

./: .gitignore  EVAL.md  OPTIMIZATION.md  README.md  pyproject.toml  run_tests.sh  setup_env.sh  solution.py
benchmarks/: benchmark.py  checkpoint_sweep.py  eval_lm_harness.py  induction_sweep.py  train_throughput.py
benchmarks/results/: baseline.json  bf16.json  compile.json  fused_adam.json  opt_b16.json  opt_b32.json  opt_b48.json  sdpa.json  tf32.json  tied.json  xent.json
demos/: __init__.py  generate_demo.py  train_demo.py  train_gpt2_fineweb.py  train_tiny_stories.py
gpt2_small/: __init__.py  generation.py  model.py  training.py
posttraining/: chat.py  common.py  dpo.py  sft.py  sft_chat.py
tests/: __init__.py  test_model.py
