[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt2-small-repro"
version = "0.1.0"
description = "A clean PyTorch implementation of GPT-2 model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "einops>=0.6.0",
    "datasets>=2.12.0",
    "matplotlib>=3.7.1",
    "numpy>=1.24.3",
    "torch>=2.0.0",
    "transformers>=4.28.1",
    "jaxtyping>=0.2.19",
    "tqdm>=4.65.0",
    "rich>=13.3.5", 
    "wandb>=0.15.0",
    "transformer_lens>=1.3.0",
    "circuitsvis>=1.40.0",
    "ipython>=8.13.2",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pytest>=7.3.1",
]

[tool.setuptools]
# Define the package structure
packages = ["gpt2_small"]
# No need to include solution.py anymore as model.py is in the package
# py-modules = ["solution"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100 